@@ -1,4 +1,6 @@
 DIST pssh-1.3.1.tar.gz 37742 RMD160 7536babbde4bb73abb38460f1cfd4ee562026063 SHA1 7686eb4578d184136e4a19fcc1fd7b50fff4252d SHA256 4701aacbcbdc018d1e87c02624589e09c956080455c87cac1497d1b2a82055a1
+DIST pssh-1.4.3.tar.gz 37403 RMD160 82feed3296af06d547dfb715315b61bb57359eeb SHA1 986a16cc4d4d00b98b889c4b7f22ef67e745c73d SHA256 165460acc1e8e96754b9641676b4ae28adbe2ac67e76eace584007f535512438
 EBUILD pssh-1.3.1.ebuild 750 RMD160 6716b23607825ac43ed05a57999e9272f10c27e9 SHA1 561a914584199313e7093170f7563c28cd7a4913 SHA256 7fbd5ae2a3b64ec815529212decaabd291244431d20ea9024357388d7dd6c7a7
-MISC ChangeLog 1410 RMD160 6b0300d5dcf92811ba868559844c02b2bd92478b SHA1 9410eea680f4bf9160b730785da433f6ca4dc315 SHA256 807b119066e66a86257e4c032dd8a02460cd4e1b3b526dab025bcdb0ee8756ad
+EBUILD pssh-1.4.3.ebuild 798 RMD160 925c45579dc63dc52f333a1f3afbbf753c6e82e0 SHA1 8f028d9d59d8e0d237d8a8d826dac042217467a5 SHA256 a0da17c3d55f11e5410769191a45048184fa584bae5af3823aa7ada3157455d5
+MISC ChangeLog 1586 RMD160 961282c57f33183e6d515d51a86bbee5d081ca78 SHA1 a39bc297b2ebed9331fb10f7020fc5a9c4362cf9 SHA256 39fc77abfc95ef9dc0db665fc3111010aa078e1d86125d4fbe3d26405df93c01
 MISC metadata.xml 223 RMD160 558c04a996cc115bc061ae9437e965d71f788618 SHA1 0c5ee840e6575243a9494a8a5185047ce404e1b9 SHA256 b9f0337efcc03897a176047ac9044c2bde145619c2cc95b18857414ffc2d24c5
